<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="welkom_title">Setupwizard</string>
    <string name="welkom_favorieten_selecteren_header">Favorieten selecteren</string>
    <string name="welkom_favorieten_selecteren_content1">Welkom in de Android-app van de 40ste editie van de Batavierenrace. Met deze app kun je de
                                                         uitslagen van alle teams, alle klassementen en informatie over alle etappes bekijken. Daarnaast
                                                         kun je luisteren naar BataRadio en weerinformatie bekijken.\n\nJe kunt ook favoriete teams selecteren. 
                                                         Deze zijn dan niet alleen snel bereikbaar vanuit het hoofdmenu, ook word je dan automatisch op de hoogte 
                                                         gesteld van nieuwe uitslagen van deze teams. Klik hieronder om favorieten te kiezen.</string>
    <string name="welkom_favorieten_selecteren_button_tekst">Voeg favoriet toe</string>
    <string name="welkom_favorieten_selecteren_content2">Je kunt ook favorieten toevoegen door via het teamoverzicht naar een team toe te gaan en dan op het
                                                         stericoontje rechtsboven te klikken.</string>
    <string name="welkom_instellingen_header">Automatische updates</string>
    <string name="welkom_instellingen_content1">Standaard worden op de achtergrond de gegevens van al je favoriete teams regelmatig opgehaald. Wanneer
                                                er nieuwe klassement- en etappeuitslagen zijn, word je hiervan via de Android-statusbalk en geluids-
                                                en trilsignalen op de hoogte gesteld. Via de instellingen kun je dit aanpassen. Klik hieronder om de instellingen
                                                te openen.</string>
    <string name="welkom_instellingen_button_tekst">Open instellingen</string>
    <string name="welkom_instellingen_content2">De instellingen zijn ook bereikbaar via de knop rechtsboven in het hoofdscherm.</string>
    <string name="welkom_button_vorige_tekst">Vorige</string>
    <string name="welkom_button_volgende_tekst">Volgende</string>
    <string name="welkom_button_voltooien_tekst">Voltooien</string>
    <string name="app_titel">Batavierenrace</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Annuleren</string>
    <string name="ab_zoeken">Zoeken</string>
    <string name="ab_sorteren">Sorteren</string>
    <string name="ab_volgen">Volg dit team</string>
    <string name="ab_verwijderen">Verwijder dit team</string>
    <string name="ab_berichten">Berichten</string>
    <string name="ab_instellingen">Instellingen</string>
    <string name="ab_foutcodes">Foutcodes</string>
    <string name="ab_addfavoteam">Voeg een team toe</string>
    <string name="ab_update">Update</string>
    <string name="main_batadag_duurt_nog_dagen">Het duurt nog %s dagen!</string>
    <string name="main_batadag_duurt_nog_dag">Het aftellen is begonnen!</string>
    <string name="main_batadag_vandaag">Batavierenrace XL gestart!</string>
    <string name="main_batadag_geweest">Tot volgend jaar!</string>
    <string name="sorteren_naam">Naam</string>
    <string name="sorteren_startnummer">Startnummer</string>
    <string name="dashboard_favorieten">Favorieten</string>
    <string name="dashboard_klassement">Klassement</string>
    <string name="dashboard_teams">Teams</string>
    <string name="dashboard_etappes">Etappes</string>
    <string name="dashboard_informatie">Informatie</string>
    <string name="dashboard_jubileum">Jubileum</string>
    <string name="dashboard_bataradio">BataRadio</string>
    <string name="dashboard_weer">Weer</string>
    <string name="dashboard_sponsor">Sponsor</string>
    <string name="zoeken_team">Zoeken…</string>
    <string name="laden_titel">Bezig met laden</string>
    <string name="km">%s km</string>
    <string name="kmu">%s km/u</string>
    <string name="uur">%s</string>
    <string name="geen_data_titel">Helaas! Kan geen gegevens ophalen.</string>
    <string name="geen_data_bericht">Controleer uw internetverbinding.</string>
    <string name="geen_internet">Geen internetverbinding, mogelijk is de data verouderd.</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="ok">OK</string>
    <string name="sort_D">\u2191</string>
    <string name="sort_A">\u2193</string>
    <string name="sort_naam">Naam</string>
    <string name="sort_startnummer">Startnummer</string>
    <string name="sort_stand">Stand</string>
    <string name="favo_verwijderteam">Verwijder team</string>
    <string name="favo_leeg_titel">U heeft geen favoriete teams!</string>
    <string name="favo_leeg_bericht">Wilt u nu teams toevoegen?</string>
    <string name="klassementen_laden">Klassementen worden geladen…</string>
    <string name="klassement_titel">Klassement</string>
    <string name="klassement_laden">Klassement wordt geladen…</string>
    <string name="klassement_header_stand">#</string>
    <string name="klassement_header_team">Team</string>
    <string name="klassement_header_tijd">Tijd</string>
    <string name="klassement_hint">Klassement is gebaseerd op etappe %s</string>
    <string name="klassement_leeg">Er is geen klassement gevonden.</string>
    <string name="teams_header_startnummer">#</string>
    <string name="teams_header_naam">Team</string>
    <string name="teams_laden">Teams worden geladen…</string>
    <string name="teams_geenteams">Geen teams gevonden.</string>
    <string name="team_laden">Team wordt geladen…</string>
    <string name="team_titel_informatie">Informatie</string>
    <string name="team_titel_looptijden">Looptijden</string>
    <string name="team_titel_klassement">Klassement</string>
    <string name="team_h1_informatie">Algemene informatie</string>
    <string name="team_looptijden">Tijd:</string>
    <string name="team_naam">Naam</string>
    <string name="team_startnummer">Startnummer</string>
    <string name="team_startgroep">Startgroep</string>
    <string name="team_h1_klassement">Klassement</string>
    <string name="team_klassement">Klassement</string>
    <string name="team_klassement_totetappe">* Klassement is gebaseerd op etappe %s</string>
    <string name="team_cum_klassement">Notering</string>
    <string name="team_totaal_looptijd">Totale looptijd</string>
    <string name="team_looptijden_header_etappe">#</string>
    <string name="team_looptijden_header_tijd">Tijd</string>
    <string name="team_looptijden_header_snelheid">Snelheid</string>
    <string name="team_looptijden_header_etappe_klassement"># Etappe</string>
    <string name="team_looptijden_header_cum_klassement"># Cumul.</string>
    <string name="team_looptijden_header_foutcode">Code</string>
    <string name="team_looptijden_leeg">Geen looptijden gevonden.</string>
    <string name="team_looptijden_draai">Draai het scherm voor meer gegevens.</string>
    <string name="etappes_laden">Etappes worden geladen…</string>
    <string name="etappes_leeg">Geen etappes gevonden.</string>
    <string name="etappes_etappe">Etappe %s</string>
    <string name="etappe_laden">Etappe wordt geladen…</string>
    <string name="etappe_titel_informatie">Informatie</string>
    <string name="etappe_titel_routes">Routes</string>
    <string name="etappe_titel_looptijden">Looptijden</string>
    <string name="etappe_informatie">Algemene informatie</string>
    <string name="etappe_informatie_nummer">Etappe</string>
    <string name="etappe_informatie_van">Van</string>
    <string name="etappe_informatie_naar">Naar</string>
    <string name="etappe_informatie_afstand">Afstand</string>
    <string name="etappe_informatie_geslacht">Geslacht</string>
    <string name="etappe_informatie_geslacht_man">Man</string>
    <string name="etappe_informatie_geslacht_vrouw">Vrouw</string>
    <string name="etappe_hoogteverschil">Hoogteverschil</string>
    <string name="etappe_recordtijd">Recordtijd</string>
    <string name="etappe_recordtijd_team">Teamnaam</string>
    <string name="etappe_recordtijd_tijd">Tijd</string>
    <string name="etappe_looptijden_header_stand">#</string>
    <string name="etappe_looptijden_header_team">Team</string>
    <string name="etappe_looptijden_header_tijd">Tijd</string>
    <string name="etappe_looptijden_laden">Looptijden worden geladen</string>
    <string name="etappe_looptijden_leeg">Geen looptijden gevonden</string>
    <string name="info_algemeen_watmoetjeweten_medischeondersteuning">In de race rijden zeven artsen mee. Zij zijn aanwezig bij iedere start, herstart en finish en kunnen via een medewerker opgeroepen worden. Als een arts naar je toe komt, ben je verplicht te wachten. Op de campus is de zorg in handen van EHBO Enschede. Die kun je vinden op de hoek van de Carilloncamping en de Drienerlolaan.</string>
    <string name="info_algemeen_watmoetjeweten_hesinname">Je kunt je hes inleveren van 17.45 tot 19.30 in de Vrijhof op de campus in Enschede.\n\n<b>Inleveren:</b>\n- De lopershes met chip\n- De fietsershes \n- De twee witte en blauwe startnummers met elk een chip\n\nLever je dit op tijd in, dan krijg je €80 borg terug. Ben je te laat, dan krijg je €70 van je borg terug.</string>
    <string name="info_algemeen_watmoetjeweten_totslot">- Het gebruik van alcohol en/of drogerende middelen tijdens de race door lopers en autobestuurders is verboden.\n- In Duitsland: geldig paspoort en groene verzekeringskaart in het busje\n- Let op omroepen en errata\n- Slapen in sportcentrum: slaapbandje dragen\n- Geen open vuur\n- Parkeren op de aangegeven plaatsen</string>
    <string name="bataradio_live_header">Internetstream</string>
    <string name="bataradio_live_beschikbaar">De livestream is beschikbaar van 27 april 21.00 tot 28 april 19.00.</string>
    <string name="bataradio_live_buffering_can_take_a_while">Afhankelijk van je telefoon en internetverbinding, kan het bufferen enige tijd duren.</string>
    <string name="bataradio_live_waarschuwing">Let op: Het afspelen van de livestream zorgt voor relatief veel dataverkeer. Wanneer je luistert via mobiel internet, kan je databundel snel leegraken. Een uur luisteren op normale kwaliteit neemt ongeveer 50MB aan data, op hoge kwaliteit 85MB en op lage kwaliteit 30MB.</string>
    <string name="kleurcode_geel_titel">Code geel</string>
    <string name="kleurcode_geel_beschrijving">&lt;b>De race tijdelijk stilgelegd vanwege %s&lt;/b></string>
    <string name="kleurcode_geel">De situatie is te gevaarlijk, de race is tijdelijk stilgelegd. Je doet het volgende:&lt;br />&lt;br />&lt;b>Op de lopersroute:&lt;/b>&lt;br />1. Let op je eigen veiligheid!&lt;br />2. Je doet mee op eigen risico!&lt;br />3. Schuil bij een onveilige situatie.&lt;br />4. Vind je het zelf (weer) veilig: doorlopen, je tijd wordt nog geregistreerd.&lt;br />&lt;br />&lt;b>Op de autoroute / een wisselpunt / een herstart:&lt;/b>&lt;br />1. Let op je eigen veiligheid!&lt;br />2. Je doet mee op eigen risico!&lt;br />3. Eén persoon informeert bij het wisselpunt of bij de infobaliebus.&lt;br />4. Volg de instructies van de organisatie op.&lt;br />&lt;br />&lt;b>Als jouw ploeg nog bij de start in Nijmegen is:&lt;/b>&lt;br />1. Volg de instructies van de organisatie op</string>
    <string name="kleurcode_totslot_titel">Tot slot</string>
    <string name="kleurcode_totslot">1. Zorg dat alle mensen uit je ploeg op de hoogte zijn van dit calamiteitenschema en dat mededelingen ook aan iedereen worden doorgegeven.\n
        							2. De race stilleggen / herstarten / stopzetten zorgt voor chaos. Het kan zijn dat de organisatie jullie busje in wil zetten om lopers en fietsers op te halen. We rekenen dan op je medewerking!\n
        							3. Zorg dat je met je lopershesje in Enschede aankomt. Daar moet je het inleveren om de borg teruggestort te krijgen.</string>
</resources>