<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
  			style="@style/h1"
  			android:text="@string/welkom_favorieten_selecteren_header" />
        <TextView
            style="@style/container_block"
            android:text="@string/welkom_favorieten_selecteren_content1" />
        <Button
            android:id="@+id/welkom_favorieten_selecteren_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welkom_favorieten_selecteren_button_tekst" />
        <TextView
            style="@style/container_block"
            android:text="@string/welkom_favorieten_selecteren_content2" />
    </LinearLayout> 
</ScrollView>