<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/listview_header" >

        <TextView
            android:id="@+id/etappe_looptijden_header_stand"
            style="@style/listview_header_text"
            android:layout_width="35dp"
            android:text="@string/etappe_looptijden_header_stand" />

        <TextView
            android:id="@+id/etappe_looptijden_header_team"
            style="@style/listview_header_text"
            android:layout_toRightOf="@id/etappe_looptijden_header_stand"
            android:text="@string/etappe_looptijden_header_team" />

        <TextView
            android:id="@+id/etappe_looptijden_header_tijd"
            style="@style/listview_header_text"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/etappe_looptijden_header_tijd" />
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        style="@style/MyListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@android:id/empty"
        style="@style/listview_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etappe_looptijden_laden" />

    <TextView
        android:id="@+id/listview_leeg"
        style="@style/listview_status"
        android:text="@string/etappe_looptijden_leeg"
        android:visibility="gone" />

</LinearLayout>