<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scroller" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/h1"
            android:text="@string/team_h1_informatie" />

        <TableLayout style="@style/table" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/table_left"
                    android:text="@string/team_naam" />

                <TextView
                    android:id="@+id/team_naam"
                    style="@style/table_right" />
            </TableRow>

            <View style="@style/divider" >
            </View>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/table_left"
                    android:text="@string/team_startnummer" />

                <TextView
                    android:id="@+id/team_startnummer"
                    style="@style/table_right" />
            </TableRow>

            <View style="@style/divider" >
            </View>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/table_left"
                    android:text="@string/team_startgroep" />

                <TextView
                    android:id="@+id/team_startgroep"
                    style="@style/table_right" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/h1"
            android:text="@string/team_h1_klassement" />

        <TableLayout style="@style/table" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/table_left"
                    android:text="@string/team_klassement" />

                <TextView
                    android:id="@+id/team_klassement"
                    style="@style/table_right" />
            </TableRow>

            <View style="@style/divider" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/table_left"
                    android:text="@string/team_cum_klassement" />

                <TextView
                    android:id="@+id/team_cum_klassement"
                    style="@style/table_right" />
            </TableRow>

            <View style="@style/divider" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/table_left"
                    android:text="@string/team_totaal_looptijd" />

                <TextView
                    android:id="@+id/team_totaal_looptijd"
                    style="@style/table_right" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/container_block"
            android:id="@+id/team_totetappe" />"
    </LinearLayout>

</ScrollView>