<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    style="@style/scroller">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <RelativeLayout
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:background="@drawable/titel" >
	        
	        <ImageView
	            android:src="@drawable/overlay_left"
	            android:layout_width="wrap_content"
		   		android:layout_height="wrap_content"
		   		android:layout_alignParentLeft="true"
		   		android:id="@+id/overlay_left"
		   		/>
	 
		    <TextView
		        android:id="@+id/label_info"
		        android:text = "Bla bla Bla bla Bla bla Bla bla Bla bla "
		         android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_toRightOf="@+id/overlay_left"
		         />
	    	<ImageView
	            android:src="@drawable/overlay_right"
	            android:layout_width="wrap_content"
		   		android:layout_height="wrap_content"
		   		android:layout_alignParentRight="true" />
	    </RelativeLayout>
	    
	    <TableLayout
    	    android:id="@+id/table_team_info"
		    style="@style/table" >
		   <TableRow
				android:layout_width="match_parent"
		    	android:layout_height="wrap_content">
		       <TextView
		    		android:text="@string/team_startnummer"
		    		style="@style/table_left" />		       
		       <TextView
		    		android:id="@+id/team_startnummer"
		    		style="@style/table_right" />
		   </TableRow>
		   
		   <TableRow
				android:layout_width="match_parent"
		    	android:layout_height="wrap_content" >
		       <TextView
					android:text="@string/team_startgroep"
					style="@style/table_left" />		       
		       <TextView
		           android:id="@+id/team_startgroep"
		    		style="@style/table_right" />
		   </TableRow>

		</TableLayout>

	
	    
		<TextView
	        android:id="@+id/label_looptijden"
	        android:text = "@string/team_looptijden"
	        style="@style/h1" />
	    
    	<TableLayout
    	    android:id="@+id/table_team_uitslag"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/container_background"
		     style="@style/table" > >
		   <TableRow
				android:layout_width="match_parent"
		    	android:layout_height="wrap_content">
		       <TextView
					android:layout_width="50dip"
		    		android:layout_height="wrap_content"
		    		android:text="#" >
		       </TextView>
		       <TextView
					android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:text="Tijd" >
		       </TextView>
		   </TableRow>
		</TableLayout>
	  
	   
	</LinearLayout>
</ScrollView>